--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "engines": {
     "node": "14.17.4",
-    "npm": "6.14.14"
+    "yarn": "1.22.5"
   },
   "eslintConfig": {
     "extends": [
