--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 Django==3.2.5
 djangorestframework==3.12.4
 django-cors-headers==3.7.0
+psycopg2-binary==2.9.1
 dj-database-url
 python-dotenv
 whitenoise
